--- a/lab3/css/styles.css
+++ b/lab3/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #faf4f1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -67,7 +68,6 @@ button:hover {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
-    display: none;
     width: 90%;
     max-width: 400px;
 }
