--- a/week6/views/task.pug
+++ b/week6/views/task.pug
@@ -3,4 +3,7 @@ html(lang="en")
   head
     title= "Task Details"
   body
-    h1 You are viewing task #{id} using a template
+    h1 You are viewing task #{id}
+    
+    p Task title: #{title}
+    p Task status: #{completed ? "Completed" : "Not Completed"}
