--- a/week6/views/task.pug
+++ b/week6/views/task.pug
@@ -5,4 +5,4 @@ html
   body
     h1 You are viewing task #{id}
     p The title of the task is #{title}
-    p Task status: #{completed ? "Task is completed" : "Task is not completed"}
+    p #{completed ? "Task is completed" : "Task is not completed"}
