update pug and css

--- a/week6/views/user.pug
+++ b/week6/views/user.pug
@@ -1,6 +1,8 @@
 html
   head
     title User Details
+    link(rel="stylesheet", href="/css/styles.css")
   body
     h1 You are viewing user #{id}
-    p The name of the user is #{name}
+    ul
+      li The name of the user is #{name}
