--- a/week6/views/task.pug
+++ b/week6/views/task.pug
@@ -1,7 +1,9 @@
 html
   head
     title Task Details
+    link(rel="stylesheet", href="/css/styles.css")
   body
     h1 You are viewing task #{id}
-    p The title of the task is #{title}
-    p #{completed ? "Task is completed" : "Task is not completed"}
+    ul
+      li The title of the task is #{title}
+      li #{completed ? "Task is completed" : "Task is not completed"}
